crates/hir-ty/tests/snapshots/jls_annotation_wellformed__functional_interface_inherited_sam.snap
---
source: crates/hir-ty/tests/jls_annotation_wellformed.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    interface Base {
        void apply();
    }

    @FunctionalInterface
    interface F extends Base {
    }
}
