crates/hir-ty/tests/snapshots/jls_annotation_wellformed__functional_interface_legal.snap
---
source: crates/hir-ty/tests/jls_annotation_wellformed.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    @FunctionalInterface
    interface F {
        void apply();
    }
}
