crates/hir-ty/tests/snapshots/jls_annotation_wellformed__functional_interface_two_abstract.snap
---
source: crates/hir-ty/tests/jls_annotation_wellformed.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    @FunctionalInterface
    interface F {
        void apply();

        void other();
    }
}

@3:5: not-a-functional-interface: Not a functional interface
