crates/hir-ty/tests/snapshots/jls_annotation_wellformed__qualified_member_type_is_legal.snap
---
source: crates/hir-ty/tests/jls_annotation_wellformed.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.Map;

class Outer<T> {
    class Inner {
    }

    Map<String, Outer<T>.Inner> members = null;
}
