crates/hir-ty/tests/snapshots/jls_annotation_wellformed__raw_type_is_not_an_arity_error.snap
---
source: crates/hir-ty/tests/jls_annotation_wellformed.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    List bare;
}

@5:4: raw-type-use: Raw use of parameterized class 'List'
