crates/hir-ty/tests/snapshots/jls_annotation_wellformed__safe_varargs_instance_method.snap
---
source: crates/hir-ty/tests/jls_annotation_wellformed.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    @SafeVarargs
    <T> void b(T... xs) {
    }
}

@3:5: invalid-safevarargs: Invalid @SafeVarargs annotation: instance method is neither final nor private
